// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider renders a brand appearance 1`] = `
<div
  aria-labelledby="divider-rb"
  aria-orientation="horizontal"
  class="fui-Divider"
  role="separator"
>
  <div
    class="fui-Divider__wrapper"
    id="divider-rb"
  >
    Brand
  </div>
</div>
`;

exports[`Divider renders a default divider 1`] = `
<div
  aria-orientation="horizontal"
  class="fui-Divider"
  role="separator"
/>
`;

exports[`Divider renders a divider with a different color 1`] = `
<div
  aria-orientation="horizontal"
  class="fui-Divider"
  role="separator"
/>
`;

exports[`Divider renders a divider with content 1`] = `
<div
  aria-labelledby="divider-r8"
  aria-orientation="horizontal"
  class="fui-Divider"
  role="separator"
>
  <div
    class="fui-Divider__wrapper"
    id="divider-r8"
  >
    Default Divider
  </div>
</div>
`;

exports[`Divider renders a divider with inset 1`] = `
<div
  aria-labelledby="divider-r9"
  aria-orientation="horizontal"
  class="fui-Divider"
  role="separator"
>
  <div
    class="fui-Divider__wrapper"
    id="divider-r9"
  >
    Inset
  </div>
</div>
`;

exports[`Divider renders a horizontal divider with a fixed width 1`] = `
<div
  aria-labelledby="divider-rk"
  aria-orientation="horizontal"
  class="fui-Divider"
  role="separator"
  style="width: 100px;"
>
  <div
    class="fui-Divider__wrapper"
    id="divider-rk"
  >
    fixed 100px width
  </div>
</div>
`;

exports[`Divider renders a strong appearance 1`] = `
<div
  aria-labelledby="divider-rc"
  aria-orientation="horizontal"
  class="fui-Divider"
  role="separator"
>
  <div
    class="fui-Divider__wrapper"
    id="divider-rc"
  >
    Strong
  </div>
</div>
`;

exports[`Divider renders a subtle appearance 1`] = `
<div
  aria-labelledby="divider-ra"
  aria-orientation="horizontal"
  class="fui-Divider"
  role="separator"
>
  <div
    class="fui-Divider__wrapper"
    id="divider-ra"
  >
    Subtle
  </div>
</div>
`;

exports[`Divider renders a vertical divider 1`] = `
<div
  aria-orientation="vertical"
  class="fui-Divider"
  role="separator"
/>
`;

exports[`Divider renders a vertical divider with a fixed height 1`] = `
<div
  aria-labelledby="divider-rj"
  aria-orientation="vertical"
  class="fui-Divider"
  role="separator"
  style="height: 100px;"
>
  <div
    class="fui-Divider__wrapper"
    id="divider-rj"
  >
    fixed 100px height
  </div>
</div>
`;

exports[`Divider renders a vertical divider with content 1`] = `
<div
  aria-labelledby="divider-ri"
  aria-orientation="vertical"
  class="fui-Divider"
  role="separator"
>
  <div
    class="fui-Divider__wrapper"
    id="divider-ri"
  >
    Vertical
  </div>
</div>
`;

exports[`Divider renders content center aligned 1`] = `
<div
  aria-labelledby="divider-re"
  aria-orientation="horizontal"
  class="fui-Divider"
  role="separator"
>
  <div
    class="fui-Divider__wrapper"
    id="divider-re"
  >
    Center
  </div>
</div>
`;

exports[`Divider renders content end aligned 1`] = `
<div
  aria-labelledby="divider-rf"
  aria-orientation="horizontal"
  class="fui-Divider"
  role="separator"
>
  <div
    class="fui-Divider__wrapper"
    id="divider-rf"
  >
    End
  </div>
</div>
`;

exports[`Divider renders content start aligned 1`] = `
<div
  aria-labelledby="divider-rd"
  aria-orientation="horizontal"
  class="fui-Divider"
  role="separator"
>
  <div
    class="fui-Divider__wrapper"
    id="divider-rd"
  >
    Start
  </div>
</div>
`;
